More page layout fixups, getting pygments working right, filling in more of chapter 2

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@ layout: chapter
 title: Build Stuff.  A book about computering.
 next: chapter-00
 ---
-<h1>{{ page.title }}</h1>
-
 <p>
   This is not a book about how to work in a particular programming
   language.  This is a book about building stuff.  Hopefully this is
@@ -17,4 +15,15 @@ next: chapter-00
   No, "computering" is not a real word.
 </p>
 
-{% nav %}
+<p>
+  You won't be learning everything you need from this book alone.
+  There will be detours along the way in which you'll be sent off to the
+  internet to research one topic or another.  This is a
+  <strong>good thing</strong> since there are so many wonderful
+  sources of information freely available online.
+</p>
+
+<p>
+  There are also some less-than-awesome sources of information online.
+  We'll be doing our best to <em>not</em> lead you toward these.
+</p>
