Not really progressing the content that much,
but adding some notes, making minor adjustments and digressing a bit to
make things teensy bit more pretty.

--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 ---
 # vim:filetype=liquid
 layout: chapter
-title: Build Stuff.  A book about computering.
+title: Build Stuff.  A book about building stuff.
 next: chapter-00
 ---
 <p>
   This is not a book about how to work in a particular programming
   language.  This is a book about building stuff.  Hopefully this is
   something you'd like to try, but if not then perhaps a better title is
-  "Help People.  A book about helping others through computering."
-</p>
-
-<p>
-  No, "computering" is not a real word.
+  &ldquo;Help People.  A book about helping others through the building of stuff.&rdquo;
 </p>
 
 <p>
@@ -26,4 +22,14 @@ next: chapter-00
 <p>
   There are also some less-than-awesome sources of information online.
   We'll be doing our best to <em>not</em> lead you toward these.
+</p>
+
+<p class="author-note">
+  Talk about what kinds of projects we'll be doing.  The first project is going
+  to be a <strong>User Script</strong> that can be installed in Chrome.
+</p>
+
+<p class="author-note">
+  What's the correct level of difficulty for a first project?  Does it have to
+  be at least somewhat practical?
 </p>
